[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "6.0.0"
tonic = "0.9.1"
prost = "0.11"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1" }
futures = { version = "0.3", default-features = false }
 
[build-dependencies]
tonic-build = "0.9.1"