[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = { version = "0.17.0" }

wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["HtmlCollection"] }

gloo = "0.8"
gloo-net = { version = "0.2.4", features = ["http", "json"] }
monaco = { version = "0.2.0", features = ["yew-components"] }
tracing-web = "0.1.2"

anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"

tracing = { version = "0.1", default-features = false }
time = { version = "0.3", features = ["wasm-bindgen"] }
tracing-subscriber = { version = "0.3", features = ["time"] }

reqwasm = "0.5.0"
yewdux = "0.9.2"

pulldown-cmark = "0.9.2"