[package]
name = "capable"
version = "0.1.0"
authors = ["lic17"]
license = "LGPL-2.1-only OR BSD-2-Clause"
edition = "2021"

[dependencies]
anyhow = "1.0.4"
libbpf-rs = "0.20.0"
libc = "0.2"
phf = { version = "0.10", features = ["macros"] }
plain = "0.2"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"]}
clap = { version = "3.1", default-features = false, features = ["std", "derive"] }

[build-dependencies]
libbpf-cargo = "0.20.0"

[features]
static = ["libbpf-rs/static"]

