#cargo-features = ["per-package-target"]

[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"
#forced-target = "wasm32-unknown-unknown"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.68"
clap = { version = "3.1", default-features = false, features = ["std", "derive"] }
phf = { version = "0.10", features = ["macros"] }
plain = "0.2"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"]}

[lib]
crate-type = ["cdylib", "rlib"]