cargo-features = ["per-package-target"]

[package]
name = "capable-wasm"
version = "0.1.0"
edition = "2021"
forced-target = "wasm32-wasi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.10", features = ["macros"] }
plain = "0.2"
chrono = "0.4.19"

[lib]
crate-type = ["cdylib", "rlib"]
